28-Jul-2018    V0.14 corrections for selection and type filters and object size pruning
20-Aug-2018.   V0.15 added sliced collections (e.g. entity or cannonical identifier),
               JSON schema description of collections, sfx/xfel examples, dictionary
               methods implemented in helper classes, and incremental repository metadata
               updates.
25-Aug-2018    V0.16 split out rcsb.utils.config, rcsb.utils.io, rcsb.utils.multiproc and
               mock-data as a shared submodule for test data. Merged branch ' namespace'
               back into master.
28-Aug-2018    V0.17 rename console scripts directory to avoid conflict with reserved keyword in Py2.
 9-Sep-2018    V0.18 add support for multi-level JSON schema generation and validation,
               integrate linking CIF methods to generate content at load time, add core
               assembly collection, add cardinal identifiers in new categories to each
               core collection, and enum normalization as a data transformation filter operation.
11-Sep-2018    V0.19 add dictionary method for citation author aggregation
                     adjust cardinality of entity and assembly identifier categories
14-Sep-2018    V0.20 Require at least one record in any array type, adjust constraints on iterables.
18-Sep-2018    V0.21 Require homogeneous categories/classes in JSON schema production.
22-Sep-2018    V0.22 Add method to generate _pdbx_struct_assembly.rcsb_candidate_assembly
10-Oct-2018    V0.23 Add date format to schema definitions; generate schemas and add validation tests
                     for repository_holdings, entity_sequence_clusters, and data_exchange schema types;
                     extend derived content for core_entry and core_entity collections;
                     add subcategory aggregation feature; and refactor api for helper methods.
12-Oct-2018    V0.24 Add rcsb_repository_holdings_transferred and  rcsb_repository_holdings_insilico_models



