@@ -60,10 +60,10 @@ setup(
                       'strict-rfc3339',
                       'mysqlclient >= "1.3.12"',
                       'pymongo >= "3.7.0"',
-                      'mmcif; python_version >= "0.21"',
+                      'mmcif; python_version >= "0.22"',
                       'scandir; python_version < "3.0"',
                       'configparser; python_version < "3.0"',
-                      'rcsb.utils.io >= "0.12"',
+                      'rcsb.utils.io >= "0.15"',
                       'rcsb.utils.config >= "0.13"',
                       'rcsb.utils.multiproc'],
     packages=find_packages(exclude=['rcsb.db.tests', 'rcsb.db.tests-*', 'tests.*']),
