@@ -5,7 +5,7 @@
 # -----------------
 #
 [tox]
-envlist = flake8, py{36}-{linux,macos}
+envlist = flake8, py{27}-{linux,macos}
 #envlist = flake8, py{37,36,27}-{linux,macos}, coverage-macos
 
 #
